Add scraper tests